[package]
edition = "2021"
name = "vid_frame_iter"
version = "0.1.0"

[lib]
crate-type = ["lib"]
name = "vid_frame_iter"

[features]
default = ["dep:image"]


[dependencies]
glib = { version = "0.20" }
gstreamer = "0.23"
gstreamer-app = { version = "0.23" }
gstreamer-pbutils = "0.23"
gstreamer-video = "0.23"
image = { version = "0.25", default-features = false, optional = true }


[dev-dependencies]
url = "2"
image = { version = "0.25", default-features = false }
